--- a/src/6-Contact/contact.css
+++ b/src/6-Contact/contact.css
@@ -254,7 +254,7 @@
     font-size: 18px;
     font-weight: 300;
     line-height: 1.6;
-    z-index: 999999;
+    z-index: 90;
     padding: 20px;
     color: #fff;
     margin-top: 5rem;
